# object0

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  components.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  tauri-publish.yml
docs/: USER_GUIDE.md
public/: site.webmanifest
scripts/release/: generate-conventional-notes.mjs  publish-aur.sh  sync-version.mjs
scripts/updater/: build-static-manifest.mjs  verify-static-manifest.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_paths.rs  crypto.rs  folder_sync.rs  jobs.rs  keychain.rs  lib.rs  main.rs  persistence.rs  rpc.rs  rpc_method.rs  s3.rs  sync.rs  tray.rs  updater.rs  util.rs  vault.rs
src/mainview/: index.css
src/mainview/app/: App.tsx  ThemeProvider.tsx
src/mainview/components/buckets/: BucketList.tsx
src/mainview/hooks/: index.ts  useJobProgress.ts  useKeyboardShortcuts.ts  useOnlineStatus.ts  useS3Buckets.ts  useS3Objects.ts
src/mainview/lib/: animations.ts  constants.ts  formatters.ts  icons.ts  object-toolbar-events.ts  rpc-client.ts
src/mainview/stores/: index.ts  useBucketStore.ts  useFavoritesStore.ts  useFolderSyncStore.ts  useJobStore.ts  useObjectStore.ts  useProfileStore.ts  useShareHistoryStore.ts  useTabStore.ts  useThemeStore.ts  useUIStore.ts  useVaultStore.ts
src/shared/: folder-sync.types.ts  job.types.ts  profile.types.ts  rpc-schema.ts  s3.types.ts  share.types.ts  ui.types.ts
(+63 files in other folders)
