[package]
name = "object0"
version = "1.1.0"
description = "FOSS desktop S3 bucket manager built with Tauri"
authors = ["object0 contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "object0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
aws-sdk-s3 = "1"
aes-gcm = "0.10"
base64 = "0.22"
percent-encoding = "2"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
futures-util = "0.3"
rfd = "0.15"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
walkdir = "2"
tar = "0.4"
flate2 = "1"
notify = "6"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
